test/Harper/Tests/Bad/NonExhaustivePatternMatch.Har
value List a = {
  variant Empty = { };
  
  variant NonEmpty = {
    data = {
      head :: a;
      tail :: List a;
    }
  };
};

cons :: a -> List a -> List a;
cons x xs = val NonEmpty { head = x, tail = xs };

empty :: List a;
empty = val Empty {};

list :: List Integer;
list = cons 42 empty;

main :: Integer;
main = 
  match list {
    NonEmpty { head: 17 } => 42,
    Empty {} => 0
  };